# novel-ai-trans

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/samples/: 69shuba.json  ixdzs8.json  kakuyomu.json  sfacg.json
docs/: API.md  GUIDE.md  PROVIDERS.md
scripts/: build.py
src/: __init__.py  config.py
src/api/: __init__.py  __main__.py  app_factory.py  application_config_context.py  auth.py  dependencies.py  errors.py  events.py  jobs.py  schemas.py
src/api/routes/: __init__.py  configs.py  crawl.py  glossary.py  health.py  jobs.py  novels.py  pack.py  system.py  translate.py
src/api/services/: __init__.py  env_persistence.py  glossary_runtime.py  job_store.py  novel_paths.py  providers.py  settings.py
src/application/: __init__.py  config_context.py  crawl.py  errors.py  pack.py  paths.py  progress.py  translate.py
src/cli/: crawl.py  pack.py  test.py  translate.py
src/domain/: glossary.py  illustrations.py  quality.py  terms.py
src/graph/: builder.py
src/graph/nodes/: chunker.py  context.py  detector.py  learner.py  reviewer.py  translator.py
src/models/: __init__.py  state.py
src/prompts/en/: learner_extract.md
src/prompts/vi/: learner_extract.md
src/services/: __init__.py  browser.py  config_generator.py  crawler.py  epub_importer.py  glossary.py  http.py  logger.py  notifier.py  packaging.py
src/services/llm/: __init__.py  base.py  factory.py  fallback.py  gemini.py  ollama.py
src/utils/: chapters.py  display.py  html.py  json.py  text.py
tests/: README.md  test_build.py
tests/api/: test_api.py  test_env_path.py  test_env_persistence.py  test_glossary_runtime.py  test_job_store.py  test_main.py  test_metadata.py  test_novels_progress.py  test_translate_endpoint.py
tests/cli/: test_cli.py  test_crawler_cli.py  test_pack.py
tests/config/: test_config.py
tests/domain/: test_domain_glossary.py  test_illustrations.py  test_learner.py
tests/graph/: test_builder.py  test_learner_filtering.py
tests/models/: test_state.py
tests/prompts/: test_prompts.py
tests/services/: test_browser.py  test_config_generator.py  test_crawler.py  test_epub_importer.py  test_glossary.py  test_llm.py  test_logger.py  test_notifier.py
tests/utils/: test_progress.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts  sse.ts  types.ts
web/src/assets/: styles.css
web/src/components/: GlossaryEditor.vue  JobMonitor.vue  ProviderModelField.vue
web/src/router/: index.ts
web/src/stores/: jobs.ts  novels.ts  settings.ts
web/src/views/: CrawlView.vue  DashboardView.vue  ImportView.vue  JobListView.vue  NovelDetailView.vue  NovelListView.vue  SettingsView.vue  TranslateView.vue
